--- a/basics-03-events-starting-code/index.html
+++ b/basics-03-events-starting-code/index.html
@@ -20,6 +20,7 @@
       <h2>Events in Action</h2>
       <button @click="add(10)">Add 10</button>
       <button @click.right="reduce(5)">Subtract 5</button>
+      <p v-once>Starting Counter: {{ counter }}</p>
       <p>Result: {{ counter }}</p>
       <input type="text" @input="updateName($event, 'Pesho')" @keyup.enter="confirmInput">
       <p>Your name: {{ confirmedName }}</p>
