--- a/basics-05-using-the-native-event-object/index.html
+++ b/basics-05-using-the-native-event-object/index.html
@@ -18,11 +18,12 @@
     </header>
     <section id="events">
       <h2>Events in Action</h2>
-      <button v-on:click="add(10)">Add 10</button>
-      <button v-on:click="reduce(5)">Subtract 5</button>
+      <button @click="add(10)">Add 10</button>
+      <button @click="reduce(5)">Subtract 5</button>
       <p>Result: {{ counter }}</p>
-      <input type="text" v-on:input="setName($event, 'Schwarzmüller')">
-      <p>Your Name: {{ name }}</p>
+      <input type="text" v-model="name">
+      <button @click="resetInput">Reset input</button>
+      <p>Your Name: {{ outputFullName() }}</p>
     </section>
   </body>
 </html>
