--- a/basics-10-styling-starting-setup/index.html
+++ b/basics-10-styling-starting-setup/index.html
@@ -17,9 +17,9 @@
       <h1>Vue Dynamic Styling</h1>
     </header>
     <section id="styling">
-      <div class="demo"></div>
-      <div class="demo"></div>
-      <div class="demo"></div>
+      <div :class="['demo', {active: boxASelected}]" @click="boxSelected('A')"></div>
+      <div :class="['demo', {active: boxBSelected}]"  @click="boxSelected('B')"></div>
+      <div :class="['demo', {active: boxCSelected}]" @click="boxSelected('C')"></div>
     </section>
   </body>
 </html>
